@@ -1,11 +1,13 @@
 [3.0.5]
         * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
         * [CHANGE]: Populate dialog has now progress bar when working.
+        * [CHANGE]: Enhanced SQL formatter to format CREATE TRIGGER statements in a bit more readable way.
         * [BUGFIX]: Fixed crash when closing Populate Dialog while populating was in progress.
         * [BUGFIX]: Fixed warning messages when there was a problem with restoring windows from last session. A message contains now window name that caused problem.
         * [BUGFIX]: #2830 Closing database list made impossible.
         * [BUGFIX]: #2829 Fixed support for DEFERRABLE (and related) keywords in foreign keys.
         * [BUGFIX]: #2827 Release a file after import.
+        * [BUGFIX]: #2826 Fixed bug in SQL formatter causing 'expr ISNULL' expressions to disappear.
 
 [3.0.4]
         * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).
